[gd_scene load_steps=4 format=3 uid="uid://c1b7tikevutu8"]

[ext_resource type="Script" uid="uid://bn3ujwfyp1xi3" path="res://books/tag/pressTag/PressTagContainer.gd" id="1_7it7l"]
[ext_resource type="PackedScene" uid="uid://dsfg8hlt3oawe" path="res://books/tag/TagContainer.tscn" id="1_y3blp"]
[ext_resource type="Texture2D" uid="uid://boy31kdf68ssp" path="res://assets/icons/unselected_v2.png" id="2_cp5eb"]

[node name="PressTagContainer" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_7it7l")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
layout_mode = 2
border_color = Color(0.5, 0.5, 0.5, 1)
border_width = 1.3
editor_only = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_cp5eb")
expand_mode = 1

[node name="Tag" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_y3blp")]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
flat = true

[connection signal="toggled" from="MarginContainer/Button" to="." method="_on_button_toggled"]
